--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* import the font from cdn */
+@import url("https://fonts.cdnfonts.com/css/neo-sans-arabic");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.arabic-font {
+  font-family: "Neo Sans Arabic", sans-serif;
+}
+
+body {
+  background-color: #faf9f6;
+}
