add simple chart

--- a/src/app/Components/dashboard/Components/chart/chart.component.html
+++ b/src/app/Components/dashboard/Components/chart/chart.component.html
@@ -1,1 +1,8 @@
-<p>الرسم البياني</p>
+<!-- card start -->
+<p-card header="Simple Card">
+  <div>
+    <p class="font-medium text-lg text-[#1C1C28]">تذكرة رقم #2342</p>
+    <div id="main" class="w-full h-[20rem]"></div>
+  </div>
+</p-card>
+<!-- card end -->
