--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -1,13 +1,14 @@
 <!-- dashboard start -->
 <section>
-  <div class="arabic-font container pl-[2%] mt-[5%]">
+  <div class="arabic-font pl-[2%] mt-[5%] pr-[7%]">
     <!-- chart with card div -->
-    <div class="grid grid-cols-5">
+    <div class="grid gap-x-8 grid-cols-6">
+      <div class="col-span-4">
+        <app-chart></app-chart>
+      </div>
+
       <div class="col-span-2">
         <app-card></app-card>
-      </div>
-      <div class="col-span-3">
-        <app-chart></app-chart>
       </div>
     </div>
 
