--- a/src/app/Components/dashboard/Components/card/card.component.html
+++ b/src/app/Components/dashboard/Components/card/card.component.html
@@ -1,5 +1,21 @@
 <div>
-  <div class="text-left">
-    <p>تعديل</p>
+  <div class="flex mb-4 justify-end">
+    <button class="bg-[#F9F9F9] px-3 py-2 rounded-md shadow-md">
+      <i class="pi pi-pen-to-square text-[#8A74F9] text-xl"></i>
+      <span class="text-2xl mx-2 text-left">تعديل</span>
+    </button>
   </div>
+
+  <!-- ticket start -->
+  <div class="w-full">
+    <div class="copuon-container rounded-md">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+        explicabo architecto consectetur eaque fuga error vitae voluptatibus
+        mollitia? Unde fugit reprehenderit quidem totam tenetur eum maxime
+        dolorem reiciendis expedita doloremque!
+      </p>
+    </div>
+  </div>
+  <!-- ticket end -->
 </div>
