--- a/src/app/Components/dashboard/Components/chart/chart.component.html
+++ b/src/app/Components/dashboard/Components/chart/chart.component.html
@@ -29,8 +29,8 @@
         </div>
       </div>
       <!-- cart title end -->
-      <div class="px-4 w-full">
-        <div id="main" class="w-full h-[15rem]"></div>
+      <div class="px-4 w-full overflow-x-auto">
+        <div id="main" class="h-[15rem]"></div>
       </div>
     </div>
   </p-card>
