--- a/src/app/Components/dashboard/Components/table/table.component.html
+++ b/src/app/Components/dashboard/Components/table/table.component.html
@@ -1,1 +1,10 @@
-<p>table works!</p>
+<!-- tabke start -->
+<section>
+  <!-- sort start -->
+  <div class="flex justify-between mt-6 mb-4">
+    <div>مبيعات التذاكر</div>
+    <div>حجز تذكرة جديدة</div>
+  </div>
+  <!-- sort end -->
+</section>
+<!-- table end -->
