--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -2,12 +2,12 @@
 <section>
   <div class="arabic-font pl-[2%] mt-[5%] pr-[7%]">
     <!-- chart with card div -->
-    <div class="grid gap-x-8 grid-cols-5">
-      <div class="col-span-3">
+    <div class="grid gap-x-8 gap-y-8 lg:gap-y-0 grid-cols-5">
+      <div class="lg:col-span-3 col-span-5">
         <app-chart></app-chart>
       </div>
 
-      <div class="col-span-2">
+      <div class="lg:col-span-2 col-span-5">
         <app-card></app-card>
       </div>
     </div>
