--- a/src/app/Components/dashboard/Components/card/card.component.html
+++ b/src/app/Components/dashboard/Components/card/card.component.html
@@ -1,8 +1,10 @@
 <div>
   <div class="flex mb-4 justify-end">
-    <button class="bg-[#F9F9F9] px-3 py-2 rounded-md shadow-md">
-      <i class="pi pi-pen-to-square text-[#8A74F9] text-xl"></i>
-      <span class="text-2xl mx-2 text-left">تعديل</span>
+    <button
+      class="bg-[#F9F9F9] px-3 py-2 rounded-md edit-button shadow-md hover:bg-orange-500 transition-all duration-200"
+    >
+      <i class="pi pi-pen-to-square text-[#8A74F9] text-xl edit-icon"></i>
+      <span class="text-2xl mx-2 text-left edit-icon">تعديل</span>
     </button>
   </div>
 
