--- a/src/app/Components/dashboard/Components/table/table.component.html
+++ b/src/app/Components/dashboard/Components/table/table.component.html
@@ -40,7 +40,7 @@
       <div>
         <p-button
           label="حجز تذكرة جديدة"
-          styleClass="bg-white text-white bg-[#8A74F9] border-gray-300 shadow-sm"
+          styleClass="bg-[#8A74F9] text-white bg-[#8A74F9] border-gray-300 shadow-sm"
         />
       </div>
     </div>
