fix share button

--- a/src/app/Components/dashboard/Components/card/card.component.html
+++ b/src/app/Components/dashboard/Components/card/card.component.html
@@ -101,7 +101,7 @@
                 <p class="text-2xl"><span>25%</span></p>
                 <div class="border-white border rounded-lg">
                   <button class="bg-transparent px-3 py-1 rounded-md">
-                    <i class="pi pi-trash text-[#fff]"></i>
+                    <i class="pi pi-send text-[#fff]"></i>
                     <span class="mx-2">مشاركة</span>
                   </button>
                 </div>
