--- a/src/app/Components/dashboard/Components/chart/chart.component.html
+++ b/src/app/Components/dashboard/Components/chart/chart.component.html
@@ -1,6 +1,10 @@
 <div>
   <div class="flex mb-4 items-center gap-x-2">
-    <button class="bg-[#E7EAED] px-3 py-2 rounded-md">
+    <button
+      pTooltip="للخلف"
+      tooltipPosition="bottom"
+      class="bg-[#E7EAED] px-3 py-2 rounded-md hover:bg-orange-500 transition-all duration-200"
+    >
       <i class="pi pi-arrow-right text-black"></i>
     </button>
     <p class="font-medium text-lg text-[#1C1C28]">تذكرة رقم #2342</p>
