--- a/src/app/Components/dashboard/Components/table/table.component.html
+++ b/src/app/Components/dashboard/Components/table/table.component.html
@@ -1,7 +1,9 @@
 <!-- tabke start -->
 <section>
   <!-- sort start -->
-  <div class="flex justify-between mt-8 mb-6">
+  <div
+    class="flex flex-col items-center justify-center gap-y-6 lg:gap-y-0 lg:flex-row lg:justify-between mt-8 mb-6"
+  >
     <div class="flex gap-x-4 items-center">
       <p class="text-xl">مبيعات التذاكر</p>
       <div class="flex gap-x-3 relative">
