--- a/src/app/Components/dashboard/Components/table/table.component.html
+++ b/src/app/Components/dashboard/Components/table/table.component.html
@@ -5,8 +5,8 @@
     class="flex flex-col items-center justify-center gap-y-6 lg:gap-y-0 lg:flex-row lg:justify-between mt-8 mb-6"
   >
     <div class="flex gap-x-4 items-center">
-      <p class="text-xl">مبيعات التذاكر</p>
-      <div class="flex gap-x-3 relative">
+      <p class="text-sm sm:text-base md:text-xl">مبيعات التذاكر</p>
+      <div class="flex gap-x-1 sm:gap-x-3 relative">
         <div class="absolute right-1 top-1">
           <button class="bg-transparent px-3 py-2 rounded-md">
             <i class="pi pi-search text-[#317740] text-lg"></i>
@@ -66,29 +66,48 @@
       >
         <ng-template pTemplate="header">
           <tr>
-            <th style="color: #abaab1; width: 14.2%; text-align: center">
+            <th
+              class="text-sm lg:text-base"
+              style="color: #abaab1; width: 14.2%; text-align: center"
+            >
               المستخدم
             </th>
-            <th style="color: #abaab1; width: 10.2%; text-align: center">
+            <th
+              class="text-sm lg:text-base"
+              style="color: #abaab1; width: 10.2%; text-align: center"
+            >
               رقم التذكرة
             </th>
             <th
+              class="text-sm lg:text-base"
               pSortableColumn="ticketPrice"
               style="color: #abaab1; width: 10.2%; text-align: center"
             >
               <p-sortIcon field="ticketPrice" />
               قيمة التذكرة
             </th>
-            <th style="color: #abaab1; width: 24.2%; text-align: center">
+            <th
+              class="text-sm lg:text-base"
+              style="color: #abaab1; width: 24.2%; text-align: center"
+            >
               السينيمات
             </th>
-            <th style="color: #abaab1; width: 8.2%; text-align: center">
+            <th
+              class="text-sm lg:text-base"
+              style="color: #abaab1; width: 8.2%; text-align: center"
+            >
               عدد الاشخاص
             </th>
-            <th style="color: #abaab1; width: 14.2%; text-align: center">
+            <th
+              class="text-sm lg:text-base"
+              style="color: #abaab1; width: 14.2%; text-align: center"
+            >
               عدد مرات الشراء
             </th>
-            <th style="color: #abaab1; width: 24.2%; text-align: center">
+            <th
+              class="text-sm lg:text-base"
+              style="color: #abaab1; width: 24.2%; text-align: center"
+            >
               التذكرة
             </th>
           </tr>
@@ -96,7 +115,9 @@
         <ng-template pTemplate="body" let-customer>
           <tr>
             <td style="text-align: center">
-              <div class="flex items-center gap-x-2">
+              <div
+                class="flex flex-col lg:flex-row gap-y-1 lg:gap-y-0 items-center gap-x-2"
+              >
                 <div>
                   <img
                     class="w-10 h-10 rounded-full"
@@ -105,29 +126,41 @@
                   />
                 </div>
                 <div>
-                  <p class="font-medium">{{ customer.user.name }}</p>
+                  <p class="font-medium text-sm lg:text-base">
+                    {{ customer.user.name }}
+                  </p>
                   <p class="text-[#92A1AD]">{{ customer.user.phone }}</p>
                 </div>
               </div>
             </td>
             <td style="text-align: center">
-              <p class="font-medium text-lg">{{ customer.ticketNumber }}</p>
+              <p class="font-medium text-sm lg:text-base text-lg">
+                {{ customer.ticketNumber }}
+              </p>
             </td>
             <td style="text-align: center">
-              <p class="font-medium text-lg">${{ customer.ticketPrice }}</p>
+              <p class="font-medium text-sm lg:text-base text-lg">
+                ${{ customer.ticketPrice }}
+              </p>
             </td>
             <td
               pTooltip="صيدناوي مول , برج العرب"
               tooltipPosition="top"
               style="text-align: center"
             >
-              <p class="font-medium text-lg">{{ customer.cinemaName }}</p>
+              <p class="font-medium text-sm lg:text-base text-lg">
+                {{ customer.cinemaName }}
+              </p>
             </td>
             <td style="text-align: center">
-              <p class="font-medium text-lg">{{ customer.numberOfPeople }}</p>
+              <p class="font-medium text-sm lg:text-base text-lg">
+                {{ customer.numberOfPeople }}
+              </p>
             </td>
             <td style="text-align: center">
-              <p class="font-medium text-lg">{{ customer.numberOfPayment }}</p>
+              <p class="font-medium text-sm lg:text-base text-lg">
+                {{ customer.numberOfPayment }}
+              </p>
             </td>
           </tr>
         </ng-template>
